feat(Rabitmq): Rabbitmq configured with consumer and backend producer
# Conflicts:
#	docs/requirement.txt
